js/src/tests/test262/built-ins/Error/prototype/toString/called-as-function.js
[
"
name
"
"
message
"
]
.
forEach
(
function
(
key
)
{
Object
.
defineProperty
(
this
key
{
get
:
function
(
)
{
throw
new
Test262Error
(
key
+
"
lookup
should
not
be
performed
"
)
;
}
}
)
;
}
this
)
;
var
toString
=
Error
.
prototype
.
toString
;
assert
.
throws
(
TypeError
function
(
)
{
toString
(
)
;
}
)
;
reportCompare
(
0
0
)
;
